Intento de menu

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="uft-8">
         <meta name="autor" content="Hiram Castillo">
-        
+
         <TITLE>Pagina para cuestionarios</TITLE>
         
         <link rel="shortcut icon" href="imagenes/bob.jpg" type="image/png">
@@ -12,5 +12,10 @@
     </head>
     <body>
         <h1>Pagina Principal</h1>
+        <ul>
+            <a class="navlink" href="mate.html">Mate</a>
+            <a class="navfis"  href="fisica.html">Fisica</a>
+            <a class="navquim"  href="quimica.html">Quimica</a>
+        </ul>
     </body>
 </html>
