--- a/fisica.html
+++ b/fisica.html
@@ -10,23 +10,35 @@
         <link rel="shortcut icon" href="imagenes/bob.jpg" type="image/png">
         <link rel="stylesheet" href="style.css">
         <script src="script.js" defer></script>
+        
     </head>
-    <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">Cuestionarios</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                  <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                  <a class="nav-link" href="mate.html">Matematicas</a>
-                  <a class="nav-link" href="fisica.html">Fisica</a>
-                  <a class="nav-link" href="quimica.html">Quimica</a>
+    <body>        
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container-fluid">
+                    <div class="navbar-brand" href="index.html">
+                        <img src="imagenes/panik.jpg" alt="" width="50" height="50">
+                    </div>
+                    <a class="navbar-brand" href="index.html">Cuestionarios</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" >
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" href="mate.html">Matematicas</a>
+                            </li>
+                            <li class="nav-item">   
+                                <a class="nav-link" href="fisica.html">Fisica</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="quimica.html">Quimica</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-              </div>
-            </div>
-          </nav>
+            </nav>
+        </header>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
     </body>
 </html>
