--- a/fisica.html
+++ b/fisica.html
@@ -8,7 +8,8 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
         <link rel="shortcut icon" href="imagenes/bob.jpg" type="image/png">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="Bootstrap/css/bootstrap.min.css" crossorigin="anonymous">
+        <link rel="stylesheet" href="Bootstrap/css/main.css">
         <script src="script.js" defer></script>
         
     </head>
