--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="uft-8">
         <meta name="autor" content="Hiram Castillo">
-
+        <meta http-equiv="X-UA Compatible" content="ie=edge">
         <TITLE>Pagina para cuestionarios</TITLE>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
@@ -12,24 +12,20 @@
         <link rel="stylesheet" href="Bootstrap/css/main.css">
         <script src="script.js" defer></script>
         <link rel="stylesheet" href="style.css">
-        <link
-  href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.1.0/mdb.min.css"
-  rel="stylesheet"
-/>
     </head>
     <body>        
         <header>
             <!-- Image and text -->
             <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
                 <div class="container-fluid">
-                    <a class="navbar-brand"href="#">Cuestionarios</a>
+                    <a class="navbar-brand"href="index.html">Cuestionarios</a>
                     <img src="imagenes/panik.jpg" alt="" width="75" height="60" class="d-inline-block align-top">
                 </div>
             </nav>
         </header>
         <section bienve>
             <div class="bienvenida">
-                <img src="imagenes/quequieresestudiar.png" alt="" width="1600" height="800">
+                <img src="imagenes/quequieresestudiar.png" alt="Nature" class="responsive">
             </div>
         </section>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
