--- a/selec.html
+++ b/selec.html
@@ -10,19 +10,14 @@
         <link rel="shortcut icon" href="imagenes/bob.jpg" type="image/png">
         <link rel="stylesheet" href="Bootstrap/css/bootstrap.min.css" crossorigin="anonymous">
         <link rel="stylesheet" href="Bootstrap/css/main.css">
-        
         <link rel="stylesheet" href="style.css">
-        <link
-  href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.1.0/mdb.min.css"
-  rel="stylesheet"
-/>
     </head>
     <body>        
         <header>
             <!-- Image and text -->
             <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
                 <div class="container-fluid">
-                    <a class="navbar-brand"href="#">Cuestionarios</a>
+                    <a class="navbar-brand" href="index.html">Cuestionarios</a>
                     <img src="imagenes/panik.jpg" alt="" width="75" height="60" class="d-inline-block align-top">
                 </div>
             </nav>
@@ -33,10 +28,10 @@
                     <div class="row row-cols-1 row-cols-md-3 g-20">
                         <div class="col">
                             <div class="card border-info mb-3" style="max-width: 18rem;">
-                                <div class="card-header"><a class="text-center">Fisica</a></div>
+                                <div class="card-header"><h5 class="text-center">Matematicas</h5></div>
                                 <div class="card-body">
                                     <h5 class="card-title">infocard</h5>
-                                    <p class="card-text">MUCHO TEXTOOOOOOOOOO</p>
+                                    <a class="card-text" href="mate.html">MUCHO TEXTOOOOOOOOOO</a>
                                 </div>
                             </div>
                         </div>
@@ -45,16 +40,16 @@
                                 <div class="card-header"><h5 class="text-center">Fisica</h5></div>
                                 <div class="card-body">
                                     <h5 class="card-title">infocard</h5>
-                                    <p class="card-text">MUCHO TEXTOOOOOOOOOO</p>
+                                    <a class="card-text" href="fisica.html">MUCHO TEXTOOOOOOOOOO</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col">
                             <div class="card border-info mb-3" style="max-width: 18rem;">
-                                <div class="card-header"><h5 class="text-center">Fisica</h5></div>
+                                <div class="card-header"><h5 class="text-center">Quimica </h5></div>
                                     <div class="card-body">
                                         <h5 class="card-title">infocard</h5>
-                                        <p class="card-text">MUCHO TEXTOOOOOOOOOO</p>
+                                        <a class="card-text" href="quimica.html">MUCHO TEXTOOOOOOOOOO</a>
                                     </div>
                             </div>
                         </div>                    
