--- a/mate.html
+++ b/mate.html
@@ -10,36 +10,50 @@
         <link rel="shortcut icon" href="imagenes/bob.jpg" type="image/png">
         <link rel="stylesheet" href="Bootstrap/css/bootstrap.min.css" crossorigin="anonymous">
         <link rel="stylesheet" href="Bootstrap/css/main.css">
-        <script src="script.js" defer></script>
-        
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>        
         <header>
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <!-- Image and text -->
+            <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
                 <div class="container-fluid">
-                    <div class="navbar-brand" href="index.html">
-                        <img src="imagenes/panik.jpg" alt="" width="50" height="50">
-                    </div>
                     <a class="navbar-brand" href="index.html">Cuestionarios</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" >
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a class="nav-link" href="mate.html">Matematicas</a>
-                            </li>
-                            <li class="nav-item">   
-                                <a class="nav-link" href="fisica.html">Fisica</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="quimica.html">Quimica</a>
-                            </li>
-                        </ul>
-                    </div>
+                    <img src="imagenes/panik.jpg" alt="" width="75" height="60" class="d-inline-block align-top">
                 </div>
             </nav>
         </header>
+        <section escoger>
+            <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+                <ol class="carousel-indicators">
+                  <li data-bs-target="#carouselExampleDark" data-bs-slide-to="1"></li>
+                  <li data-bs-target="#carouselExampleDark" data-bs-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                  <div class="carousel-item active" data-bs-interval="10000">
+                    <img src="imagenes/Matemáticas1.png" class="image" alt="">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>First slide label</h5>
+                      <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item" data-bs-interval="2000">
+                    <img src="imagenes/Matemáticas2.png" class="image" alt="">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>Second slide label</h5>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </div>
+                  </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleDark" role="button" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleDark" role="button" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </a>
+              </div>
+        </section>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
     </body>
 </html>
