--- a/mate.html
+++ b/mate.html
@@ -17,7 +17,7 @@
             <!-- Image and text -->
             <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="index.html">Cuestionarios</a>
+                    <a class="navbar-brand" href="index.html">Home</a>
                     <img src="imagenes/panik.jpg" alt="" width="75" height="60" class="d-inline-block align-top">
                 </div>
             </nav>
@@ -33,14 +33,14 @@
                     <img src="imagenes/Matemáticas1.png" class="image" alt="">
                     <div class="carousel-caption d-none d-md-block">
                       <h5>First slide label</h5>
-                      <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                      <a class="card-text" href="mate.html">MUCHO TEXTOOOOOOOOOO</a>
                     </div>
                   </div>
                   <div class="carousel-item" data-bs-interval="2000">
                     <img src="imagenes/Matemáticas2.png" class="image" alt="">
                     <div class="carousel-caption d-none d-md-block">
                       <h5>Second slide label</h5>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                      <a class="card-text" href="mate.html">MUCHO TEXTOOOOOOOOOO</a>
                     </div>
                   </div>
                 </div>
