--- a/selec.html
+++ b/selec.html
@@ -17,7 +17,7 @@
             <!-- Image and text -->
             <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="index.html">Cuestionarios</a>
+                    <a class="navbar-brand" href="index.html">Home</a>
                     <img src="imagenes/panik.jpg" alt="" width="75" height="60" class="d-inline-block align-top">
                 </div>
             </nav>
